--- a/STYLES.CSS
+++ b/STYLES.CSS
@@ -34,5 +34,8 @@ section div{flex-direction: row;}
     margin: 10px;
 }
 .btn:hover:not(.active){
-    background: #FA4354;
+    background: #43fac0;
 }
+
+.link { color: black; 
+text-decoration: none;}
