--- a/STYLES.CSS
+++ b/STYLES.CSS
@@ -24,10 +24,6 @@ section div{flex-direction: row;}
 
 .titulo{color: plum;}
 
-.portada{
-    width: 1500px;
-    height: 150px;
-}
 .trabajos{
     float: left;
     list-style: none;
@@ -39,3 +35,26 @@ section div{flex-direction: row;}
 
 .link { color: black; 
 text-decoration: none;}
+
+
+.contenedor{
+    position: relative;
+    display: inline-block;
+    text-align: center;
+}
+
+.nombre{
+    position: static;
+    top: 10px;
+    left: 10%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 60px;
+    color: rgb(63, 156, 237);
+}
+.ciudad{
+    position: absolute;
+    top: 80%;
+    right: 10%;
+    font-size: 16px;
+    color: rgb(46, 135, 213);
+}
