--- a/STYLES.CSS
+++ b/STYLES.CSS
@@ -1,4 +1,5 @@
-summary{color: darkmagenta;font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
+summary{color: darkmagenta;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
 
 summary{justify-content: space-between;}
 
@@ -12,15 +13,24 @@ nav ul li{
     clear: both;
 }
 
-li{font-weight: bold; justify-content:space-between}
+li{font-weight: bold; 
+    justify-content:space-between}
 
 section img{width: 120px;}
 
 section div{flex-direction: row;}
 
-.nombre{color: darkorange; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;font-style: oblique;}
+.nombre{color: rgb(255, 255, 255); 
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-style: oblique;
+    font-size: 64pt;
+}
 
-.ciudad{color: deeppink; font-family: Verdana, Geneva, Tahoma, sans-serif; font-style: italic;}
+.ciudad{color: rgb(235, 255, 88); 
+    font-family: Verdana, Geneva, Tahoma, sans-serif; 
+    font-style: italic;
+    font-size: 32pt;
+}
 
 .titulo{color: plum;}
 
@@ -36,7 +46,6 @@ section div{flex-direction: row;}
 .link { color: black; 
 text-decoration: none;}
 
-
 .contenedor{
     position: relative;
     display: inline-block;
@@ -44,17 +53,12 @@ text-decoration: none;}
 }
 
 .nombre{
-    position: static;
-    top: 10px;
-    left: 10%;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 60px;
-    color: rgb(63, 156, 237);
+    position: absolute;
+    top: 50px;
+    left: 40px;
 }
 .ciudad{
     position: absolute;
     top: 80%;
-    right: 10%;
-    font-size: 16px;
-    color: rgb(46, 135, 213);
+    left: 60%;
 }
